# iree-llvm-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  FIXME  README-Substrait.md  README.md  add.mlir  benchmark.sh  cast.patch  configure.py  driver.py  mlir-proto-opt.cpp  pinned-llvm-version  requirements-triton.txt  requirements.txt  run_benchmarks.py  run_experiments.py  run_tests.py  triton.patch
configurations/iree_all/: CMakeLists.txt
experimental/iterators/: .clang-format  CMakeLists.txt  Pipfile  README.md  requirements.txt  while-op.mlir
experimental/iterators/docs/: CMakeLists.txt  doxygen.cfg.in
experimental/iterators/examples/: CMakeLists.txt  Main.cpp
experimental/iterators/include/: CMakeLists.txt
experimental/iterators/lib/: CMakeLists.txt
experimental/iterators/python/: CMakeLists.txt  IteratorsDialects.cpp  IteratorsPasses.cpp
experimental/iterators/src/: Main.cpp  main.cc
experimental/iterators/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  simple-plan-input.mlir  simple-plan-target.mlir  simple.mlir  while-op.mlir
experimental/iterators/tests/: ColumnScanOperatorTest.cpp  FilterOperatorTest.cpp  HashJoinOperatorTest.cpp  MapOperatorTest.cpp  ReduceByKeyOperatorTest.cpp  ReduceOperatorTest.cpp  UtilsTest.cpp  column_operator_test.cc  column_scan_operator_test.cc  filter_operator_test.cc  hash_join_operator_test.cc  map_operator_test.cc  reduce_by_key_operator_test.cc  reduce_operator_test.cc  utils_test.cc
experimental/iterators/tools/: CMakeLists.txt
experimental/iterators/unittests/: CMakeLists.txt  ColumnScanOperatorTest.cpp  FilterOperatorTest.cpp  HashJoinOperatorTest.cpp  MapOperatorTest.cpp  ReduceByKeyOperatorTest.cpp  ReduceOperatorTest.cpp  UtilsTest.cpp  lit.cfg.py
lib/: CAPI.cpp  CAPI.h  CMakeLists.txt  ConvertToAsyncDialect.cpp  FuseFillIntoReduction.cpp  LinalgTensorCodegenDriver.cpp  LinalgTileAndFuse.cpp  PassDetail.h  PythonAPI.cpp  Registration.cpp  Transforms.h  VectorDistribution.cpp
lib/CAPI/: CMakeLists.txt  Dialects.cpp  Passes.cpp  Transforms.cpp  Triton.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/IteratorsToLLVM/: CMakeLists.txt  IteratorAnalysis.cpp  IteratorAnalysis.h  IteratorsToLLVM.cpp
lib/Conversion/StatesToLLVM/: CMakeLists.txt  StatesToLLVM.cpp
lib/Conversion/TabularToLLVM/: CMakeLists.txt  TabularToLLVM.cpp
lib/Conversion/TritonFuncToFunc/: CMakeLists.txt  TritonFuncToFunc.cpp
lib/Conversion/TritonPtrToLLVM/: CMakeLists.txt  TritonPtrToLLVM.cpp
lib/Conversion/TritonSPMDToFuncArgs/: CMakeLists.txt  TritonSPMDToFuncArgs.cpp
lib/Conversion/TritonToLLVM/: CMakeLists.txt  TritonToLLVM.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/LinalgExt/: CMakeLists.txt
lib/Dialects/: CMakeLists.txt
lib/Dialects/VectorExt/: CMakeLists.txt  VectorExtDialect.cpp  VectorExtOps.cpp
lib/ExecutionEngine/: AsyncRuntime.cpp  CMakeLists.txt
lib/LinalgExt/: CMakeLists.txt  LinalgExtDialect.cpp  LinalgExtInterfaces.cpp  LinalgExtOps.cpp  LowerToSCF.cpp  Tiling.cpp
lib/Passes/: CMakeLists.txt  FuseFillIntoReduction.cpp  VectorDistribution.cpp
lib/Transforms/: CMakeLists.txt  ConvertToAsyncDialect.cpp  ConvertToGPUDialect.cpp  FuseFillIntoReduction.cpp  LinalgTileAndFuse.cpp  Listener.cpp  ListenerCSE.cpp  ListenerGreedyPatternRewriteDriver.cpp  StagedPatternRewriteDriver.cpp  VectorDistribution.cpp
lib/TritonCAPI/: CMakeLists.txt  Dialects.cpp
lib/Utils/: NameAssigner.cpp
lib/VectorExt/: CMakeLists.txt  VectorExtDialect.cpp  VectorExtOps.cpp
lib/indexing/CAPI/: CMakeLists.txt  Dialects.cpp
lib/iterators/CAPI/: CMakeLists.txt  Passes.cpp
lib/iterators/Utils/: CMakeLists.txt
runners/: CMakeLists.txt  ConvertToGPUDialect.cpp  LinalgComprehensiveBufferizePass.cpp  LinalgTensorCodegenStrategy.cpp  LinalgTileAndDistribute.cpp  LinalgTileToGeneric.cpp  LinalgTiledLoopToSCFPass.cpp  README.md  Transforms.h  __init__.py.in  mlir-proto-opt.cpp
runners/include/: CMakeLists.txt  Passes.h  Passes.td
runners/lib/: CAPI.cpp  CMakeLists.txt  ConvertToAsyncDialect.cpp  ConvertToGPUDialect.cpp  LinalgComprehensiveBufferizePass.cpp  LinalgDistributePass.cpp  LinalgTensorCodegenDriver.cpp  LinalgTensorCodegenStrategy.cpp  LinalgTileAndFuse.cpp  LinalgTiledLoopToSCFPass.cpp  Registration.cpp  Registration.h  Transforms.h
runners/lib/CAPython/: CMakeLists.txt  LinalgTensorPasses.capi.cpp  LinalgTensorPasses.py.cpp  Passes.capi.cpp.inc  Passes.capi.h.inc
runners/python/: CMakeLists.txt
runners/test/: matmul_f16_base.mlir  matmul_f32_base.mlir  matmul_i8_i8_i32_base.mlir  pack_2d_to_4d_by_8x4_blocks.mlir  test_add_matmul.mlir  test_constant.mlir  test_dot.mlir  test_dot_exec.mlir  test_matmul_f32_000.mlir  test_matmul_f32_000_exec.mlir  test_matmul_f32_001.mlir  test_matmul_f32_001_exec.mlir  test_matmul_f32_002.mlir  test_matmul_f32_002_exec.mlir  test_matmul_f32_003.mlir  test_matmul_f32_003_exec.mlir  test_matmul_f32_004.mlir  test_matmul_f32_004_exec.mlir  test_matmul_f32_005_exec.mlir  test_matmul_f32_cuda.mlir  test_matmul_f32_mt_cpu.mlir  tiled_loop_bufferization.mlir  tiled_loop_conversion.mlir  tiled_loop_distribution.mlir  tiled_loop_to_scf.mlir
runners/test/cuda/: test_matmul_f32_cuda.mlir
runners/test/python/: compilation.py  experts.py  harness.py  invoke_cli.py  linalg_SpMSpM.py  linalg_matmul.py  linalg_matmul_bench.py  linalg_matmul_test.py  memref_basics.py  rank_cli.py  rank_mca_cli.py  search.py  search_cli.py  sparse_codegen_test_common.py  sparse_codegen_test_elementwise.py  sparse_codegen_test_matmul.py  sparse_codegen_test_reduce.py  sparse_codegen_test_util.py  sparse_matmat.py  (+1 more)
tools/indexing-opt/: CMakeLists.txt  indexing-opt.cpp
tools/iterators-lsp-server/: CMakeLists.txt  iterators-lsp-server.cpp
tools/mlir-proto-lsp-server/: CMakeLists.txt  mlir-proto-lsp-server.cpp
tools/mlir-proto-opt/: CMakeLists.txt  mlir-proto-opt.cpp
tools/structured-lsp-server/: CMakeLists.txt  structured-lsp-server.cpp
tools/structured-opt/: CMakeLists.txt  structured-opt.cpp
tools/structured-translate/: CMakeLists.txt  structured-translate.cpp
(+1459 files in other folders)
